# avnirpy

./: .coveragerc  .gitignore  .pep8speaks.yml  Dockerfile  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml  test.yml
avnirpy/: version.py
avnirpy/io/: image.py  utils.py
avnirpy/io/tests/: test_image.py  test_utils.py
avnirpy/reporting/: report.py  screenshot.py
avnirpy/reporting/tests/: test_report.py  test_screenshot.py
avnirpy/scripts/: avnir_compute_segmentation_stats.py  avnir_compute_volume_per_label.py  avnir_convert_nnunet_to_onnx.py  avnir_create_stroke_report.py  avnir_create_volumetric_report.py  avnir_nifti_to_nrrd.py  avnir_predict_nnunet_onnx.py  avnir_qc_labels.py
avnirpy/segmentation/: utils.py
avnirpy/segmentation/tests/: test_utils.py
avnirpy/templates/: stroke_report.html  volumetric_report.html
data/: qc_labels_config.yaml
scripts/: avnir_check_number_vols_vs_segs.py  avnir_compute_volume_per_label.py  avnir_json_to_csv.py  avnir_nifti_to_nrrd.py  avnir_nrrd_to_nifti.py  avnir_print_header.py  avnir_qc_labels.py  avnir_save_images_info.py
scripts/avnir_check_number_of_files/: avnir_check_number_vols_vs_segs.py  llg_ggtv.sh
