[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avnirpy"
version = "0.1.0"
description = "Avnirpy: A brain segmentation toolbox."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "The Onset developers", email = "onset.labo@gmail.com"},
    {name = "Guillaume Theaud", email = "guillaume.theaud.chum@ssss.gouv.qc.ca"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
dependencies = [
"MetricsReloaded @ git+https://github.com/Project-MONAI/MetricsReloaded@b6da9e10f1a0645626c1bbddf72501712ce40c1c",
"monai==1.4.*",
"nibabel==5.2.*",
"numpy==1.26.*",
"pandas==2.2.*",
"pillow==11.1.*",
"pynrrd==1.0.*",
"pytest==8.3.*",
"pytest-cov==5.0.*",
"pytest-mock==3.14.*",
"pytest-metadata==3.1.*",
"pytest-console-scripts==1.4.*",
"pytest-html==4.1.*",
"pyyaml==6.0.*",
"weasyprint==63.1"
]

[project.scripts]
avnir_compute_segmentation_stats = "avnirpy.scripts.avnir_compute_segmentation_stats:main"
avnir_compute_volume_per_label = "avnirpy.scripts.avnir_compute_volume_per_label:main"
avnir_create_stroke_report = "avnirpy.scripts.avnir_create_stroke_report:main"
avnir_create_volumetric_report = "avnirpy.scripts.avnir_create_volumetric_report:main"
avnir_json_to_csv = "avnirpy.scripts.avnir_json_to_csv:main"
avnir_nifti_to_nrrd = "avnirpy.scripts.avnir_nifti_to_nrrd:main"
avnir_nrrd_to_nifti = "avnirpy.scripts.avnir_nrrd_to_nifti:main"
avnir_print_header = "avnirpy.scripts.avnir_print_header:main"
avnir_qc_labels = "avnirpy.scripts.avnir_qc_labels:main"
avnir_save_images_info = "avnirpy.scripts.avnir_save_images_info:main"

[project.urls]
    Homepage = "https://github.com/llgneuroresearch/avnirpy"

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
py-modules = ["avnirpy"]

[tool.hatch.build]
include = [
  "/avnirpy/templates/*.html",
]